...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addNoteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/add_note_noteTitle"
        android:inputType="textPersonName"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="@id/addNoteTitle"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addNoteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_note_description" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
